# Customer_Master_ETL

./: README.md  pyproject.toml
customer_master_etl/: .gitignore  README.md  pyproject.toml
customer_master_etl/cleanup_scripts/: DedupBronzeMaster.SQL  RemoveNullsAndSpaces.SQL  WeeklyUpdateCleanUp.SQL
customer_master_etl/customer_master_etl/modules/: Load.py  SelectData.py  Transform.py
customer_master_etl/customer_master_etl/src/: main.py
customer_master_etl/data_sources/CAT/SQLs/: CAT_DCN.sql
customer_master_etl/data_sources/CODA/SQLs/: OAS_ELMADDRLIST.sql
customer_master_etl/data_sources/CloudLink/SQLs/: CSA_Equipment.sql  EquipmentQuoteHeader.sql  EquipmentQuoteHeaderDelta.sql  OpportunityHeaderDelta.sql  PartsServiceQuoteHeader.sql  Prospects.sql  avDL_DW_CustomerDivision.sql  avDL_DW_Influencer.sql  contacts.sql  customers.sql  opportunityHeader.sql
customer_master_etl/data_sources/CustomerMaster/SQLs/: CustomerMaster.sql
customer_master_etl/data_sources/DBS/SQLs/: CIPCPHN0.sql  CustomerMaster.sql  IRSPINFL0.sql  IRSPSHIP0.sql  IRSPUCID0.sql  LHLDBSDCNT.sql
customer_master_etl/data_sources/PCC/Excel/: PCC 2025 02.xlsx
customer_master_etl/data_sources/Stoneware/SQLs/: AccountLogins.sql
customer_master_etl/data_sources/VisionLink/Excel/: VisionLink 2025 02.xlsx
customer_master_etl/modules/: CleanUp.py  ExtractCustomerData.py  FuzzyMatching.py  Load.py  SEQLogging.py  SelectData.py  Transform.py
customer_master_etl/orchestrator/: task_orchestrator.py
customer_master_etl/src/: config.py  main.py
(+19 files in other folders)
