[tool.poetry]
name = "customer-master-etl"
version = "0.1.0"
description = ""
authors = ["Connor Meek <Meek_Connor@wagnerequipment.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "2.0.30"
joblib = "1.4.2"
numpy = "2.0.0"
pandas = "2.2.2"
argparse = "1.4.0"
configparser = "7.0.0"
rapidfuzz = "3.9.0"
pyodbc = "5.1.0"
openpyxl = "3.1.5"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
